# queens-code

./: CMakeLists.txt  Doxyfile  README.md
addons/: CMakeLists.txt
addons/AssimpModelLoader/src/: AssimpModelLoader.cpp
addons/StlExtension/cmake/: ste-config.cmake
addons/StlExtension/ste/: DAG.h
cmake_modules/: FindAssimp.cmake  Findste.cmake
resources/models/Cursor/: Cursor.mtl
resources/models/FieldBorder/: FieldBorder.mtl
resources/models/GrassyGround/: GrassyGround.mtl
resources/models/IceBlock/: IceBlock.mtl
resources/models/StandardGround/: StandardGround.mtl
resources/models/StoneWall/: StoneWall.mtl
resources/models/Throne/: Throne.mtl
resources/models/UnitAgent/: UnitAgent.mtl
resources/models/UnitBrute/: UnitBrute.mtl
resources/models/UnitKnight/: UnitKnight.mtl
resources/models/UnitPriest/: UnitPriest.mtl
resources/models/UnitQueen/: UnitQueen.mtl
resources/models/UnitRanger/: UnitRanger.mtl
resources/qml/: Controls.qml  Credits.qml  GUI.qml  GameMenu.qml  GameOverlay.qml  LoadingScreen.qml  MainMenu.qml  MenuButton.qml  MenuButtonDialog.qml  MenuButtonSmall.qml  OptionsMenu.qml  PlayMenu.qml  PlayScenarioSetup.qml  PlayStandardSetup.qml  PlayerCommandPointIndicator.qml  PlayerSetup.qml  Rules.qml  UnitAbilitiesBar.qml  UnitAbility.qml  UnitInfoBar.qml
resources/shaders/: draw_fs.glsl  draw_vs.glsl  fs.glsl  vs.glsl
src/: ApplicationControl.cpp  ApplicationControl.h  CMakeLists.txt  main.cpp
src/game/: Ability.cpp  Ability.h  AbilityAnimation.cpp  AbilityAnimation.h  Board.cpp  Board.h  Buff.cpp  Buff.h  Cursor.cpp  Cursor.h  Field.cpp  Field.h  Game.cpp  Game.h  GameColors.h  GameEnums.h  Pathfinding.cpp  Pathfinding.h  Player.cpp  Player.h  Targetfinding.cpp  Targetfinding.h  Unit.cpp  Unit.h
src/render/: Camera.cpp  Camera.h  CameraControl.cpp  CameraControl.h  ModelLoader.cpp  ModelLoader.h  QuickRendererBase.cpp  QuickRendererBase.h  RenderingObject.cpp  RenderingObject.h  SimpleVT.cpp  SimpleVT.h  Simple_geSGRenderer.cpp  Simple_geSGRenderer.h
(+107 files in other folders)
